@@ -55,6 +55,7 @@ typedef enum
   CorrelateNormalizeValue = 0x10000, /* '^' see ScaleKernelValue() */
   AreaValue = 0x20000,     /* '@'  resize to area - special use flag */
   DecimalValue = 0x40000,  /* '.'  floating point numbers found */
+  SeparatorValue = 0x80000,  /* 'x'  separator found  */
 #undef AllValues
   AllValues = 0x7fffffff
 } GeometryFlags;
