@@ -946,7 +946,7 @@ WandExport MagickBooleanType MogrifyImage(ImageInfo *image_info,const int argc,
             */
             (void) SyncImageSettings(mogrify_info,*image);
             flags=ParsePageGeometry(*image,argv[i+1],&geometry,exception);
-            if ((flags & SigmaValue) == 0)
+            if ((flags & HeightValue) == 0)
               geometry.height=geometry.width;
             mogrify_image=BorderImage(*image,&geometry,exception);
             break;
